@startuml US3006_CD

interface BoardRepository {
  {abstract} findActiveBoardsThatUserCanWrite()
}

interface PostItRepository {
  {abstract} findAllByBoardId(boardId)
  {abstract} save(postIt)
}

class ListBoardService {
  - boardRepository

  + ListBoardService(boardRepository)

  + userWritableBoards(userId)
}

class BoardService {
  - postItRepository

  + BoardService(postItRepository)

  + isCellAvailable(boardId, x, y)
  + checkCellExists(boardId, x, y)
  + existsPostIt(postIts, x, y)
}

class ImageEncoderService{
  + encodeImage(imagePath)
}

class CreatePostItUI {}

class CreatePostItController {
  - boardRepository
  - postItRepository

  + CreatePostItController(boardRepository, postItRepository)

  + listBoardsThatUserCanWrite()
  + validateCoordinates(boardId, x, y)
  + createPostIt(boardId, x, y, title, description, imagePath)
  + savePostIt(postIt)
}

class PostIt {
  - title
  - coordinates
  - user
  - board
  - state
  - createdAt
  - isLatest
  - image
  - description

  + toDto()
}

class Board {
}


class BoardDTO {
  + toDto()
}

class BoardDTOParser {
  + toDto()
}


CreatePostItUI ..> CreatePostItController
CreatePostItController --> ListBoardService
CreatePostItController --> BoardService
CreatePostItController --> ImageEncoderService

ListBoardService ..> Board
CreatePostItController --> PostItRepository
CreatePostItController --> BoardRepository

BoardService ..> PostIt
BoardService ..> Board
BoardDTOParser ..> BoardDTO
BoardDTOParser ..> Board

@enduml
